@@ -3,6 +3,9 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2006/10/09
+	* Fixed SC_NOCHAT printing the "skills are now available" message twice on
+	  natural expiration. [Skotlex]
 2006/10/08
 	* Updated sql files [Playtester]
 2006/10/06
